# evilmeme

./: .env  Cargo.toml  README.md  app.py  requirements.txt
.github/workflows/: release.yml
src/: main.rs
