[package]
name = "evilmeme"
version = "1.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.5", default-features = false, features = [
  "client",
  "gateway",
  "model",
  "cache",
  "builder",
  "rustls_backend"
] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.33"
env_logger = "0.11.10"
anyhow = "1.0.102"
